feat: complete TS 119 602 contextual semantics
